--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,16 @@
 }
 
 /* Remove intrusive focus outlines on charts and SVGs */
-.recharts-surface:focus, 
-.recharts-wrapper:focus, 
-svg:focus {
+.recharts-wrapper *:focus {
   outline: none !important;
+}
+
+.recharts-sector:focus {
+  outline: none !important;
+}
+
+.recharts-wrapper {
+  -webkit-tap-highlight-color: transparent;
 }
 
 /* Shimmer Animation */
